# GGsBot.rs

./: .env.local.example  .gitignore  Cargo.toml  README.md  rustfmt.toml  wrangler.toml
src/: error.rs  lib.rs  utils.rs
src/.old/commands/: update.rs
src/.old/commands/mods/: clear.rs  mod.rs
src/.old/discord/: bot.rs  command.rs  error.rs  integration.rs  interaction.rs  member.rs  message.rs  mod.rs  user.rs  verification.rs
src/commands/: clear.rs  hello.rs  mod.rs  register.rs  update.rs  version.rs
src/commands/bot/: mod.rs  update.rs  version.rs
src/commands/ext/: disable.rs  enable.rs  mod.rs  setup.rs  show.rs  teardown.rs
src/commands/nasa/: apod.rs  mod.rs
src/commands/tempvc/: mod.rs  new.rs
src/components/: navbar.rs
src/discord/: attachment.rs  bot.rs  channel.rs  command.rs  component.rs  components.rs  embed.rs  error.rs  http.rs  interaction.rs  locale.rs  message.rs  mod.rs  option.rs  response.rs  scheduler.rs  verification.rs
src/embeds/: default.rs  error.rs  mod.rs
src/framework/: mod.rs
src/framework/discord/: bot.rs  command.rs  component.rs  embed.rs  interaction.rs  mod.rs  option.rs  response.rs  verification.rs
src/framework/structs/: kv.rs  mod.rs  queue.rs  scheduler.rs
src/framework/structs/config/: extension.rs
src/framework/traits/: color.rs  command.rs  component.rs  mod.rs  namespaces.rs  page.rs  queue.rs  trigger.rs  ui.rs
src/pages/: hello.rs
src/queues/: apod.rs
src/services/: apod.rs  discord.rs  mod.rs
src/structs/: kv.rs  mod.rs  queue.rs  scheduler.rs
src/structs/config/: extension.rs
src/traits/: color.rs  command.rs  events.rs  mod.rs  namespaces.rs  page.rs  queue.rs  trigger.rs  ui.rs
src/triggers/: apod.rs
src/ui/: error.rs  hello.rs  mod.rs  nasa.rs
src/ui/components/: navbar.rs
src/ui/embeds/: default.rs  error.rs  mod.rs
src/ui/pages/: mod.rs  nasa.rs
