[package]
name = "ggsbotrs"
version = "0.1.0"
authors = ["GitGinocchio <106624847+GitGinocchio@users.noreply.github.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.4"
worker = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
serde_repr = "0.1.20"
thiserror = "2.0.18"
ed25519-dalek = "2.2.0"
hex = "0.4.2"
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.57"
chrono = { version = "0.4.44", features = ["serde"] }
bitflags = { version = "2.11.1", features = ["serde"] }
twilight-model = { version = "0.17.1" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

